# nerraders-taskcli

./: .gitignore  CHANGELOG.md  README.md  TaskCLI.spec  pyproject.toml
src/taskcli/: config.py  constants.py  history.py  main.py  storage.py  tasks.py
