[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/taskcli/__init__.py"

[project]
name = "taskcli"
dynamic = ["version"]
description = "An easy to use taskcli for managing your tasks, built using python's typer library."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dateparser>=1.4.0",
    "loguru>=0.7.3",
    "platformdirs>=4.9.6",
    "questionary>=2.1.1",
    "typer>=0.24.1",
]
authors = [
    { name = "nerrader" }
]
license = "MIT"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pyinstaller>=6.20.0",
    "radon>=6.0.1",
    "ruff>=0.15.9",
    "types-dateparser>=1.4.0.20260408",
    "vermin>=1.8.0",
    "vulture>=2.16",
]

[project.scripts]
taskcli = "taskcli.main:main"
